fix: [Navbar] Provide padding on small screens

--- a/src/components/Navbar/navbar.less
+++ b/src/components/Navbar/navbar.less
@@ -8,11 +8,13 @@
   align-items: flex-start;
   font-size: 16px;
   padding-bottom: @space-sm;
+  padding-left: @space-sm;
 
   @media (min-width: @breakpoint) {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding-left: 0;
 
     .o-header_logo {
       min-width: 237px;
